--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "less": "^4.2.0",
     "markdown-it-mathjax3": "^4.3.2",
+    "vite-plugin-glsl": "^1.2.1",
     "vitepress": "^1.0.0-rc.40"
   },
   "dependencies": {
