--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "less": "^4.2.0",
     "markdown-it-mathjax3": "^4.3.2",
     "vite-plugin-glsl": "^1.2.1",
-    "vitepress": "^1.0.0-rc.40"
+    "vitepress": "^1.0.1"
   },
   "dependencies": {
     "gsap": "^3.12.5",
